= ActiveMerchant CHANGELOG

* Allow LinkPoint cancellations for recurring billing. [yanagimoto.shin]
* Add support for Åland Islands to the country list [cody]

== Version 1.3.1 (January 28, 2008)

* Rename BrainTreeGateway to BraintreeGateway, but keep alias to old naming for backwards compatibility [cody]

== Version 1.3.0 (January 28, 2008)

* Remove attr_readers for url and response from Gateway [cody]
* Remove @url from EfsnetGateway [cody]
* Remove @response instance variable in QuickpayGateway. [cody]
* Remove @response instance variable in PsigateGateway. Don't use billing address for shipping [cody]
* Remove @response instance variable in PaypalGateway. Don't use billing address for shipping. [cody]
* Remove @response instance variable in PayflowGateway [cody]
* Remove @response instance variable in MonerisGateway [cody]
* Remove @response instance variable and don't use billing address for shipping address in LinkpointGateway [cody]
* Remove @response instance variable from ExactGateway [cody]
* Remove @response instance variable from EwayGateway [cody]
* Remove @response instance variable from EfsnetGateway [cody]
* Remove @response instance variable from DataCashGateway [cody]
* Don't use billing_address for shipping_address in CyberSourceGateway [cody]
* Remove @response instance variable from CardStreamGateway [cody]
* Remove @response instance variable from BrainTreeGateway [cody]
* Remove unused deal_with_cc method from BogusGateway [cody]
* Remove test_result_from_cc_number completely from ActiveMerchant [cody]
* Don't use billing_address for shipping_address in Realex [cody]
* Update Realex to add support for cvv data. remove test_result_from_cc_number. [cody]
* Update Protx to add support for avs and cvv data. remove test_result_from_cc_number. [cody]
* Include ActiveMerchant::Utils module in test_helper and use generate_unique_id from the module instead of generate_order_id. [cody]
* Update SecurePay tests to check for avs and cvv data. [cody]