@@ -244,6 +244,10 @@ secure_pay_tech:
   login: TESTDIGISPL1
   password: d557591484cb2cd12bba445aba420d2c69cd6a88
 
+secure_pay_au:
+  login:
+  password:
+
 #  Replace with your serial numbers for the skipjack test environment
 skipjack:
   login: X
